fix: correct spacing in first-screen section

--- a/dev/sass/first-screen.scss
+++ b/dev/sass/first-screen.scss
@@ -2,7 +2,7 @@
 
 .first-screen {
     background: url(./assets/img/first-screen.png) center / cover no-repeat;    
-    padding: 456px 10px 10px;
+    padding: 456px 10px 12px;
     
     &__title {
         color: variables.$primary-color;
